# rdpge

./: .gitignore  LICENSE  README.md  dev.html  implementation_spec.md  novel.html  pyproject.toml  visualize_exec.py
.github/workflows/: publish.yml
examples/: coding_agent.py
src/rdpge/: __init__.py  agent.py
src/rdpge/core/: __init__.py  context.py  engine.py  executor.py  graph.py  models.py
src/rdpge/llm/: __init__.py  adapters.py  base.py
src/rdpge/observe/: __init__.py  hooks.py  trace.py
src/rdpge/prompts/: __init__.py
src/rdpge/prompts/templates/: system.j2
src/rdpge/storage/: __init__.py  base.py
src/rdpge/tools/: __init__.py  base.py  registry.py
tests/: __init__.py  test_live.py  verify_changes.py
