[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdpge"
version = "0.1.0"
description = "RDPGE: Runtime Dynamic & Probabilistic Graph Execution — A novel paradigm for agentic AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jahanzeb Ahmed"}
]
keywords = ["ai", "agents", "llm", "agentic", "graph", "execution", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Jahanzeb-git/rdpge"
Documentation = "https://github.com/Jahanzeb-git/rdpge#readme"
Issues = "https://github.com/Jahanzeb-git/rdpge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rdpge = ["prompts/templates/*.j2"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
